build: allow building a gtk4 flavor of libnma

--- a/.gitignore
+++ b/.gitignore
@@ -51,8 +51,11 @@ src/connection-editor/nm-connection-editor-service-glue.h
 src/connection-editor/ce-resources.c
 src/connection-editor/ce-resources.h
 src/libnma/libnma.pc
+src/libnma/libnma-gtk4.pc
 src/libnma/NMA-1.0.gir
 src/libnma/NMA-1.0.typelib
+src/libnma/NMA4-1.0.gir
+src/libnma/NMA4-1.0.typelib
 src/libnma/nma-resources.c
 src/libnma/nma-resources.h
 src/libnma/nma-version.h
