--- a/Makefile.am
+++ b/Makefile.am
@@ -205,6 +205,26 @@ src_utils_libutils_libnm_glib_la_LIBADD = \
 
 endif
 
+#if WITH_LIBNMA_GTK4
+
+noinst_LTLIBRARIES += src/utils/libutils-libnm-gtk4.la
+
+src_utils_libutils_libnm_gtk4_la_CPPFLAGS = \
+	"-I$(srcdir)/shared" \
+	$(GTK4_CFLAGS) \
+	$(LIBNM_CFLAGS)
+
+src_utils_libutils_libnm_gtk4_la_SOURCES = \
+	$(shared_files) \
+	src/utils/utils.c \
+	src/utils/utils.h
+
+src_utils_libutils_libnm_gtk4_la_LIBADD = \
+	$(GTK4_LIBS) \
+	$(LIBNM_LIBS)
+
+#endif
+
 check_programs += src/utils/tests/test-utils
 
 src_utils_tests_test_utils_SOURCES = src/utils/tests/test-utils.c
@@ -321,6 +341,33 @@ src_wireless_security_libwireless_security_libnm_glib_la_LIBADD = \
 $(src_wireless_security_libwireless_security_libnm_glib_la_OBJECTS): $(wireless_security_h_gen)
 
 endif
+
+#if WITH_LIBNMA_GTK4
+
+noinst_LTLIBRARIES += src/wireless-security/libwireless-security-libnm-gtk4.la
+
+src_wireless_security_libwireless_security_libnm_gtk4_la_SOURCES = \
+	$(wireless_security_c_real)
+
+nodist_src_wireless_security_libwireless_security_libnm_gtk4_la_SOURCES = \
+	$(wireless_security_c_gen)
+
+src_wireless_security_libwireless_security_libnm_gtk4_la_CPPFLAGS = \
+	"-I$(srcdir)/shared" \
+	"-I$(srcdir)/src/utils" \
+	"-I$(srcdir)/src/libnma" \
+	-Isrc/libnma \
+	$(GTK4_CFLAGS) \
+	$(LIBNM_CFLAGS)
+
+src_wireless_security_libwireless_security_libnm_gtk4_la_LIBADD = \
+	src/utils/libutils-libnm-gtk4.la \
+	$(GTK4_LIBS) \
+	$(LIBNM_LIBS)
+
+$(src_wireless_security_libwireless_security_libnm_gtk4_la_OBJECTS): $(wireless_security_h_gen)
+
+#endif
 
 EXTRA_DIST += \
 	src/wireless-security/eap-method-fast.ui \
@@ -643,9 +690,82 @@ src_libnma_tests_wf_LDADD = \
 	$(LIBNM_LIBS) \
 	src/libnma/libnma.la
 
+#if WITH_LIBNMA_GTK4
+
+lib_LTLIBRARIES += src/libnma/libnma-gtk4.la
+
+src_libnma_libnma_gtk4_la_SOURCES = \
+	$(libnma_h_priv_real) \
+	$(libnma_c_real)
+
+if WITH_GCR_GTK4
+src_libnma_libnma_gtk4_la_SOURCES += \
+	$(libnma_h_priv_gcr) \
+	$(libnma_c_gcr)
+endif
+
+nodist_src_libnma_libnma_gtk4_la_SOURCES = \
+	$(libnma_h_priv_gen) \
+	$(libnma_c_gen)
+
+src_libnma_libnma_gtk4_la_CFLAGS = \
+	-DICONDIR=\""$(datadir)/icons"\" \
+	-DBINDIR=\""$(bindir)"\" \
+	-DSYSCONFDIR=\""$(sysconfdir)"\" \
+	-DLIBEXECDIR=\""$(libexecdir)"\" \
+	-DDATADIR=\""$(datadir)"\" \
+	-DAUTOSTARTDIR=\""$(sysconfdir)/xdg/autostart"\" \
+	-DNMALOCALEDIR=\"$(datadir)/locale\" \
+	-DNETWORKMANAGER_COMPILATION=NM_NETWORKMANAGER_COMPILATION_LIB \
+	"-I$(srcdir)/shared" \
+	"-I$(srcdir)/src/utils" \
+	"-I$(srcdir)/src/wireless-security" \
+	"-I$(srcdir)/src/libnma" \
+	-Isrc/libnma \
+	$(GTK4_CFLAGS) \
+	$(LIBNM_CFLAGS) \
+	$(GUDEV_CFLAGS) \
+	$(GCR_GCR4_CFLAGS)
+
+src_libnma_libnma_gtk4_la_LIBADD = \
+	src/wireless-security/libwireless-security-libnm-gtk4.la \
+	$(GTK4_LIBS) \
+	$(LIBNM_LIBS) \
+	$(GUDEV_LIBS) \
+	$(GCR_GCR4_LIBS)
+
+EXTRA_src_libnma_libnma_gtk4_la_DEPENDENCIES = src/libnma/libnma.ver
+
+src_libnma_libnma_gtk4_la_LDFLAGS = \
+	-Wl,-no-undefined \
+	-Wl,--version-script=$(srcdir)/src/libnma/libnma.ver
+
+
+pkgconfig_DATA += src/libnma/libnma-gtk4.pc
+
+if HAVE_INTROSPECTION
+src/libnma/NMA4-1.0.gir: src/libnma/libnma-gtk4.la
+src_libnma_NMA4_1_0_gir_INCLUDES = NM-1.0 Gtk-4.0
+src_libnma_NMA4_1_0_gir_EXPORT_PACKAGES = libnma-gtk4
+src_libnma_NMA4_1_0_gir_CFLAGS = $(src_libnma_libnma_gtk4_la_CFLAGS)
+src_libnma_NMA4_1_0_gir_LIBS = src/libnma/libnma-gtk4.la
+src_libnma_NMA4_1_0_gir_FILES = \
+	$(libnma_h_pub) \
+	$(libnma_c_real)
+if WITH_GCR_GTK4
+src_libnma_NMA4_1_0_gir_FILES += \
+	$(libnma_c_gcr)
+endif
+src_libnma_NMA4_1_0_gir_SCANNERFLAGS = --warn-all --identifier-prefix=NMA --symbol-prefix=nma
+INTROSPECTION_GIRS += src/libnma/NMA4-1.0.gir
+endif
+
+#endif
+
 EXTRA_DIST += \
 	src/libnma/nma-version.h.in \
 	src/libnma/libnma.pc.in \
+	src/libnma/libnma-gtk4.pc.in \
 	src/libnma/libnma.ver \
 	src/libnma/wifi.ui \
 	src/libnma/nma-mobile-wizard.ui \
