--- a/configure.ac
+++ b/configure.ac
@@ -141,6 +141,14 @@ PKG_CHECK_MODULES(NOTIFY, [libnotify >= 0.4.3])
 PKG_CHECK_MODULES(GTK3, gtk+-3.0 >= 3.10)
 GTK3_CFLAGS="$GTK3_CFLAGS -DGDK_VERSION_MIN_REQUIRED=GDK_VERSION_3_4 -DGTK_VERSION_MAX_ALLOWED=GTK_VERSION_3_4"
 
+PKG_CHECK_MODULES(GTK4, gtk+-4.0 >= 3.90)
+GTK4_CFLAGS="$GTK4_CFLAGS -DGDK_VERSION_MIN_REQUIRED=GDK_VERSION_3_94 -DGTK_VERSION_MAX_ALLOWED=GTK_VERSION_3_94"
+
+# No such thing yet, just same lame duck placeholders.
+# it may actually end up called differently.
+AC_DEFINE(WITH_GCR_GTK4, 0, [Define if Gcr is available])
+AM_CONDITIONAL(WITH_GCR_GTK4, false)
+
 AC_ARG_WITH([appindicator],
             AS_HELP_STRING([--with-appindicator=no|yes|auto|ayatana|ubuntu], [Build with lib(ayatana-)appindicator support in addition to xembed systray support.]),
             [], [with_appindicator=no])
@@ -313,6 +321,7 @@ AC_CONFIG_FILES([
 Makefile
 src/libnm-gtk/libnm-gtk.pc
 src/libnma/libnma.pc
+src/libnma/libnma-gtk4.pc
 po/Makefile.in
 man/nm-applet.1
 man/nm-connection-editor.1
