--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -46,6 +46,7 @@ src/connection-editor/ce-polkit.c
 src/connection-editor/ce-polkit-button.c
 [type: gettext/glade]src/connection-editor/ce-ppp-auth-methods.ui
 src/connection-editor/connection-helpers.c
+[type: gettext/glade]src/connection-editor/gtk/menus.ui
 src/connection-editor/ip4-routes-dialog.c
 src/connection-editor/ip6-routes-dialog.c
 src/connection-editor/nm-connection-editor.c
