Add -secure icons required for correct VPN icon display in AppIndicator mode.
 Icons were created for Ubuntu and have been obtained from the
 network-manager-applet src:package in Ubuntu. The package maintainer
 applied no specific copyrights to those files. In debian/copyright of
 the Ubuntu package they are covered by this copyright info block:

 Files: *
 Copyright: 2004 - 2015 Red Hat, Inc.
            2005 - 2008 Novell, Inc.
            2001, 2002 Free Software Foundation
 License: GPL-2+

https://bugzilla.gnome.org/show_bug.cgi?id=796258

--- a/Makefile.am
+++ b/Makefile.am
@@ -68,15 +68,21 @@ icon22dir = $(datadir)/icons/hicolor/22x22/apps
 icon22_DATA = \
 	icons/22/nm-adhoc.png \
 	icons/22/nm-device-wired.png \
+	icons/22/nm-device-wired-secure.png \
 	icons/22/nm-device-wwan.png \
 	icons/22/nm-mb-roam.png \
 	icons/22/nm-no-connection.png \
 	icons/22/nm-secure-lock.png \
 	icons/22/nm-signal-00.png \
+	icons/22/nm-signal-00-secure.png \
 	icons/22/nm-signal-100.png \
+	icons/22/nm-signal-100-secure.png \
 	icons/22/nm-signal-25.png \
+	icons/22/nm-signal-25-secure.png \
 	icons/22/nm-signal-50.png \
+	icons/22/nm-signal-50-secure.png \
 	icons/22/nm-signal-75.png \
+	icons/22/nm-signal-75-secure.png \
 	icons/22/nm-stage01-connecting01.png \
 	icons/22/nm-stage01-connecting02.png \
 	icons/22/nm-stage01-connecting03.png \
