build: find is required by libtool
It's not necessarily present among the packages in a minimal
installation (such as Fedora's docker image). Worse even, libtool just
ends up not linking to some .la libraries.

Don't assume it's there.

--- a/configure.ac
+++ b/configure.ac
@@ -39,6 +39,11 @@ if test x$has_file = xno ; then
     AC_MSG_ERROR(["file" utility not found.])
 fi
 
+AC_CHECK_PROG([has_find], find, yes, no)
+if test x$has_find = xno ; then
+    AC_MSG_ERROR(["find" utility not found.])
+fi
+
 dnl Define _GNU_SOURCE for various things like strcasestr()
 AC_USE_SYSTEM_EXTENSIONS
 
