build: install the appdata to a non-legacy location
The current AppStream specification prefers /usr/share/metainfo eveyone
who relies on this (that's distros, not the end users) already supports
the new location.

https://gitlab.gnome.org/GNOME/network-manager-applet/issues/2

--- a/meson.build
+++ b/meson.build
@@ -403,7 +403,7 @@ custom_target(
   output: appdata,
   command: intltool_xml_cmd,
   install: true,
-  install_dir: join_paths(nma_datadir, 'appdata')
+  install_dir: join_paths(nma_datadir, 'metainfo')
 )
 
 schema_conf = configuration_data()
