--- a/configure.ac
+++ b/configure.ac
@@ -142,7 +142,7 @@ PKG_CHECK_MODULES(GTK3, gtk+-3.0 >= 3.10)
 GTK3_CFLAGS="$GTK3_CFLAGS -DGDK_VERSION_MIN_REQUIRED=GDK_VERSION_3_4 -DGTK_VERSION_MAX_ALLOWED=GTK_VERSION_3_4"
 
 AC_ARG_WITH([appindicator],
-            AS_HELP_STRING([--with-appindicator=no|yes|auto|ayatana|ubuntu], [Build with lib(ayatana-)appindicator support instead of xembed systray support.]),
+            AS_HELP_STRING([--with-appindicator=no|yes|auto|ayatana|ubuntu], [Build with lib(ayatana-)appindicator support in addition to xembed systray support.]),
             [], [with_appindicator=no])
 if test "$with_appindicator" != "no"; then
 	if test "$with_appindicator" = "yes" -o "$with_appindicator" = "auto"; then
