nma/mobile-providers: also use the data file locations from pc files
If a distribution lacks global datadir (e.g. NixOS), libnma would not
be able to find mobile-data-provider-info and isocodes without user
having to add them to XDG_DATA_DIRS manually.

This patch allows falling back to the paths provided by pkg-config
files of the data packages, making it work on more exotic platforms.

Closes: https://gitlab.gnome.org/GNOME/network-manager-applet/issues/14

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,6 +43,7 @@
       gobject-introspection-devel redhat-rpm-config
       gtk-doc
       iso-codes-devel
+      mobile-broadband-provider-info-devel
       jansson-devel
       ModemManager-glib-devel
       libselinux-devel
@@ -66,6 +67,7 @@
       -Dteam=false
       -Dgcr=false
       -Diso_codes=false
+      -Dmobile_broadband_provider_info=false
       -Dld_gc=false
       -Dgtk_doc=false
       -Dintrospection=false
@@ -90,6 +92,7 @@
       -Dteam=true
       -Dgcr=true
       -Diso_codes=true
+      -Dmobile_broadband_provider_info=true
       -Dld_gc=true
       -Dgtk_doc=true
       -Dintrospection=true
@@ -114,6 +117,7 @@
       --without-libnm-gtk
       --disable-nls
       --disable-iso-codes
+      --disable-mobile-broadband-provider-info
       --disable-gtk-doc
       --disable-introspection
       --disable-schemas-compile
@@ -141,6 +145,7 @@
       --without-libnm-gtk
       --enable-nls
       --enable-iso-codes
+      --enable-mobile-broadband-provider-info
       --enable-gtk-doc
       --enable-introspection
       --enable-schemas-compile
