--- a/configure.ac
+++ b/configure.ac
@@ -97,6 +97,29 @@ else
     AC_DEFINE_UNQUOTED([ISO_CODES_PREFIX],["$prefix"],[ISO codes prefix])
 fi
 
+# Check for mobile-broadband-provider-info for Mobile Broadband wizard
+AC_MSG_CHECKING([whether to disable mobile-broadband-provider-info at build-time])
+AC_ARG_ENABLE([mobile-broadband-provider-info],
+    AS_HELP_STRING([--disable-mobile-broadband-provider-info],[do not check for mobile-broadband-provider-info at build-time]),
+    [],[disable_mobile_broadband_provider_info_check=no])
+if test x$disable_mobile_broadband_provider_info_check = xno ; then
+    AC_MSG_RESULT([no])
+else
+    AC_MSG_RESULT([yes])
+fi
+
+if test x$disable_mobile_broadband_provider_info_check = "xno" ; then
+    AC_DEFINE_UNQUOTED([MOBILE_BROADBAND_PROVIDER_INFO_DATABASE],["`$PKG_CONFIG --variable=database mobile-broadband-provider-info`"],[Mobile Broadband Service Provider Information Database location])
+    PKG_CHECK_MODULES(MOBILE_BROADBAND_PROVIDER_INFO, [mobile-broadband-provider-info],
+        [],
+        [echo -e "\n$MOBILE_BROADBAND_PROVIDER_INFO_PKG_ERRORS.\n"
+         echo "Consider installing the package or adjusting the PKG_CONFIG_PATH environment variable."
+         echo "You can also disable build-time check for 'mobile-broadband-provider-info' via --disable-mobile-broadband-provider-info";
+         exit 1;])
+else
+    AC_DEFINE_UNQUOTED([MOBILE_BROADBAND_PROVIDER_INFO_DATABASE],["$prefix/share/mobile-broadband-provider-info/serviceproviders.xml"],[Mobile Broadband Service Provider Information Database location])
+fi
+
 dnl
 dnl API documentation
 dnl
