libnm-gtk: use new providers database constant
https://gitlab.gnome.org/GNOME/network-manager-applet/merge_requests/18
introduced a new constant providing more accurate path for Mobile Broadband
provider info database. We should use it in libnm-gtk as well.

This also prevents a cyclic dependency on NixOS.

--- a/meson.build
+++ b/meson.build
@@ -137,7 +137,7 @@ if enable_mobile_broadband_provider_info
   mobile_broadband_provider_info_dep = dependency('mobile-broadband-provider-info')
   config_h.set_quoted('MOBILE_BROADBAND_PROVIDER_INFO_DATABASE', mobile_broadband_provider_info_dep.get_pkgconfig_variable('database'))
 else
-  config_h.set_quoted('MOBILE_BROADBAND_PROVIDER_INFO_DATABASE', join_paths(nma_prefix, 'share', 'mobile-broadband-provider-info', 'serviceproviders.xml'))
+  config_h.set_quoted('MOBILE_BROADBAND_PROVIDER_INFO_DATABASE', join_paths(nma_datadir, 'mobile-broadband-provider-info', 'serviceproviders.xml'))
 endif
 
 gio_dep = dependency('gio-2.0', version: '>= 2.38')
