--- a/src/libnma/nma-version.h.in
+++ b/src/libnma/nma-version.h.in
@@ -72,9 +72,11 @@
 #define NMA_VERSION_1_8_8  (NMA_ENCODE_VERSION (1, 8, 8))
 #define NMA_VERSION_1_8_10 (NMA_ENCODE_VERSION (1, 8, 10))
 #define NMA_VERSION_1_8_12 (NMA_ENCODE_VERSION (1, 8, 12))
+#define NMA_VERSION_1_8_18 (NMA_ENCODE_VERSION (1, 8, 18))
+#define NMA_VERSION_1_10   (NMA_ENCODE_VERSION (1, 10, 0))
 
-#define NMA_VERSION_CUR_STABLE  NMA_VERSION_1_8_10
-#define NMA_VERSION_NEXT_STABLE NMA_VERSION_1_8_12
+#define NMA_VERSION_CUR_STABLE  NMA_VERSION_1_8_18
+#define NMA_VERSION_NEXT_STABLE NMA_VERSION_1_10
 
 #define NMA_VERSION NMA_ENCODE_VERSION (NMA_MAJOR_VERSION, NMA_MINOR_VERSION, NMA_MICRO_VERSION)
 
@@ -121,6 +123,12 @@
 # define NMA_AVAILABLE_IN_1_8            G_UNAVAILABLE(1,8)
 #else
 # define NMA_AVAILABLE_IN_1_8
+#endif
+
+#if NMA_VERSION_MAX_ALLOWED < NMA_VERSION_1_10
+# define NMA_AVAILABLE_IN_1_10           G_UNAVAILABLE(1,10)
+#else
+# define NMA_AVAILABLE_IN_1_10
 #endif
 
 #endif  /* NMA_VERSION_H */
